# solana-jupiter-bot

./: CODEOWNERS  Cargo.toml  README.md  go.mod  main.go
.github/workflows/: ci.yml
cmd/: root.go  run.go
src/: main.rs
tests/: cli.rs
