[package]
name = "arb-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
assert_cmd = "2.0.6"
assert_fs = "1.0.9"
clap = { version = "4.0.24", features = ["derive"] }
predicates = "2.1.3"
